--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
+ext {
+	springBootVersion = '1.3.1.RELEASE'
+	jooqVersion = '3.7.2'
+}
+
 buildscript {
-	ext {
-		springBootVersion = '1.3.1.RELEASE'
-	}
+
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "org.jooq:jooq-codegen:${jooqVersion}"
 	}
 }
 
@@ -32,6 +36,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	runtime 'hsqldb:hsqldb:1.8.0.10'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile "org.jooq:jooq:${jooqVersion}"
 }
 
 
