--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+#Fill in your own database credentials
+
 spring.datasource.url=jdbc:mysql://localhost/employees
 spring.datasource.username=kevintan
 spring.datasource.password=kevintan
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#If you use your own existing database, dont use create-drop, instead use validate or update
 spring.jpa.hibernate.ddl-auto=validate
 
+#Depends on your type of database
 spring.jooq.sql-dialect=mysql
